Correct width and alignment of containers
The containers of the main section and bottom section had different
widths, so their children weren't aligning properly with one another.
Don't know if using calc() was the best approach, but I think it looks
better now than it did before.

Also changed min-width of the highlighted article's image so that, at
the very least, it doesn't break the page on mobile (the header isn't
responsive yet so it will break anyways, though).

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ a {
 /* Main styling */
 
 body {
+  box-sizing: content-box;
   flex-direction: column;
   max-width: 1080px;
   min-height: 100vh;
@@ -45,7 +46,7 @@ body {
 
 header {
   justify-content: space-between;
-  margin: 56px 0;
+  margin: 60px 0;
   gap: 40px;
 }
 
@@ -54,7 +55,7 @@ header {
 }
 
 .nav-items {
-  gap: 32px;
+  gap: 40px;
   align-items: center;
   list-style-type: none;
 }
@@ -67,24 +68,30 @@ header {
   color: var(--soft-red);
 }
 
+a, button {
+  transition: 0.2s;
+}
+
 .content {
   flex-grow: auto;
   flex-direction: column;
-  gap: 56px;
+  gap: 60px;
+  align-items: center;
 }
 
 main {
-  gap: 20px;
-  justify-content: space-between;
+  gap: 60px 30px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 section.highlighted-article {
   flex-direction: column;
-  flex-basis: 67%;
+  flex-basis: calc(1020px * (2 / 3) + 30px);
 }
 
 .highlighted-image {
-  min-width: 640px;
+  min-width: 300px;
 }
 
 .highlighted-image img {
@@ -93,19 +100,21 @@ section.highlighted-article {
 }
 
 .highlighted-content {
-  margin-top: 32px;
-  gap: 25px;
-  justify-content: space-between;
+  margin-top: 30px;
+  gap: 30px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .highlighted-headline,
 .highlighted-sub {
-  flex: 1;
+  flex-basis: calc(1020px * 1 / 3);
+  min-width: 300px;
 }
 
 .highlighted-headline {
   color: var(--very-dark-blue);
-  font-size: 48px;
+  font-size: 50px;
   font-weight: 900;
 }
 
@@ -115,15 +124,14 @@ h3 {
 }
 
 .read-more {
-  margin-top: 32px;
+  margin-top: 30px;
   border: none;
-  padding: 16px 30px;
+  padding: 15px 30px;
   background-color: var(--soft-red);
   color: var(--off-white);
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.2em;
-  transition: 0.2s;
   cursor: pointer;
 }
 
@@ -132,8 +140,8 @@ h3 {
 }
 
 section.new-articles {
-  min-width: 240px;
-  flex-basis: 32%;
+  min-width: 300px;
+  flex-basis: calc(1020px * 1 / 3);
   flex-direction: column;
   padding: 20px;
   background-color: var(--very-dark-blue);
@@ -141,7 +149,7 @@ section.new-articles {
 }
 
 .new-articles-title {
-  margin: 5px 0 10px;
+  margin: 10px 0 20px;
   color: var(--soft-orange);
   font-size: 40px;
   font-weight: 700;
@@ -151,12 +159,12 @@ section.new-articles {
   margin: 10px 0;
 }
 
-.new-articles h2 {
+.new-article h2 {
   margin-bottom: 15px;
-  font-size: 18px;
+  font-size: 20px;
 }
 
-.new-articles a {
+.new-article a {
   color: var(--off-white);
 }
 
@@ -171,19 +179,20 @@ section.new-articles {
   margin: 20px 0;
 }
 
-.suggested-articles {
-  justify-content: space-between;
-  gap: 20px;
+section.suggested-articles {
+  gap: 30px;
   flex-wrap: wrap;
-}
-
-.suggested-articles img {
-  flex-basis: 30%;
-  min-width: 0px;
+  justify-content: space-evenly;
 }
 
 .suggested-article {
-  flex-basis: 32%;
+  flex-basis: calc(1020px * 1 / 3);
+  min-width: 300px;
+}
+
+.suggested-article img {
+  flex-basis: 30%;
+  min-width: 0px;
 }
 
 .suggested-article-content {
@@ -203,4 +212,8 @@ section.new-articles {
 .suggested-article a {
   color: var(--very-dark-blue);
   font-size: 18px;
+}
+
+.suggested-article a:hover {
+  color: var(--soft-red);
 }
